--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ reqwest = { version = "0.12", features = ["blocking"] }
 base64 = "0.22"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-v2parser = { path = "../v2-uri-parser" }
+#v2parser = { path = "../v2-uri-parser" }
+v2parser = { git = "https://github.com/house-of-vanity/v2-uri-parser.git" }
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
+zip = "2.2"
 
 [build-dependencies]
 embed-resource = "2.5"
@@ -27,4 +29,5 @@ windows = { version = "0.58", features = [
     "Win32_UI_Shell",
     "Win32_UI_Shell_Common",
     "Win32_System_Com",
+    "Win32_System_Registry",
 ] }
